# plasma-theme-master

./: .gitignore  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_LOG.md  README.md  debug_logger.py  install.sh  package.env  plasma-theme-master.desktop  plasma-theme-master.service  uninstall.sh
src/: CMakeLists.txt  cli.py  main.cpp  main.py
src/core/: CLIHandler.cpp  CLIHandler.h  Config.cpp  Config.h  GlobalThemeManager.cpp  GlobalThemeManager.h  Logger.cpp  Logger.h  Solar.cpp  Solar.h  ThemeReader.cpp  ThemeReader.h  ThemeWriter.cpp  ThemeWriter.h  config.py  gtk.py  kvantum.py  logger.py  plasma.py  solar.py
src/gui/: GlobalThemeEditor.cpp  GlobalThemeEditor.h  MainWindow.cpp  MainWindow.h  global_theme_editor_tab.py  main_window.py  scheduler_tab.py
