cmake_minimum_required(VERSION 3.16)
project(plasma-theme-master VERSION 1.0.5)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Dependencies
find_package(ECM REQUIRED NO_MODULE)
set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})

find_package(Qt6 6.0 REQUIRED COMPONENTS Core Widgets)
find_package(KF6 6.0 REQUIRED COMPONENTS Config CoreAddons)

# Suppress KDEInstallDirs warnings by explicitly adopting Qt's install paths
if(DEFINED CMAKE_INSTALL_DATAROOTDIR)
    set(KDE_INSTALL_DATAROOTDIR "${CMAKE_INSTALL_DATAROOTDIR}")
endif()
if(DEFINED CMAKE_INSTALL_DATADIR)
    set(KDE_INSTALL_DATADIR "${CMAKE_INSTALL_DATADIR}")
endif()
if(DEFINED CMAKE_INSTALL_LOCALEDIR)
    set(KDE_INSTALL_LOCALEDIR "${CMAKE_INSTALL_LOCALEDIR}")
endif()
if(DEFINED CMAKE_INSTALL_MANDIR)
    set(KDE_INSTALL_MANDIR "${CMAKE_INSTALL_MANDIR}")
endif()
if(DEFINED CMAKE_INSTALL_INFODIR)
    set(KDE_INSTALL_INFODIR "${CMAKE_INSTALL_INFODIR}")
endif()
if(DEFINED CMAKE_INSTALL_SYSCONFDIR)
    set(KDE_INSTALL_SYSCONFDIR "${CMAKE_INSTALL_SYSCONFDIR}")
endif()
if(DEFINED CMAKE_INSTALL_BINDIR)
    set(KDE_INSTALL_BINDIR "${CMAKE_INSTALL_BINDIR}")
endif()
if(DEFINED CMAKE_INSTALL_SBINDIR)
    set(KDE_INSTALL_SBINDIR "${CMAKE_INSTALL_SBINDIR}")
endif()
if(DEFINED CMAKE_INSTALL_LIBDIR)
    set(KDE_INSTALL_LIBDIR "${CMAKE_INSTALL_LIBDIR}")
endif()
if(DEFINED CMAKE_INSTALL_LIBEXECDIR)
    set(KDE_INSTALL_LIBEXECDIR "${CMAKE_INSTALL_LIBEXECDIR}")
endif()
if(DEFINED CMAKE_INSTALL_INCLUDEDIR)
    set(KDE_INSTALL_INCLUDEDIR "${CMAKE_INSTALL_INCLUDEDIR}")
endif()
if(DEFINED CMAKE_INSTALL_LOCALSTATEDIR)
    set(KDE_INSTALL_LOCALSTATEDIR "${CMAKE_INSTALL_LOCALSTATEDIR}")
endif()
if(DEFINED CMAKE_INSTALL_SHAREDSTATEDIR)
    set(KDE_INSTALL_SHAREDSTATEDIR "${CMAKE_INSTALL_SHAREDSTATEDIR}")
endif()

include(KDEInstallDirs)
include(KDECompilerSettings NO_POLICY_SCOPE)
include(KDECMakeSettings)

add_subdirectory(src)

install(FILES plasma-theme-master.desktop DESTINATION ${KDE_INSTALL_APPDIR})
install(PROGRAMS uninstall.sh DESTINATION ${KDE_INSTALL_BINDIR} RENAME plasma-theme-master-uninstall)
